fixed unwanted horizontal scroll

--- a/style.css
+++ b/style.css
@@ -67,6 +67,15 @@
 .lp{
     text-align: center;
 }
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+
+    /*
+    fixed the unwanted horizontal scroll with what were shown in this video on youtube
+    https://www.youtube.com/watch?v=Gc_nAiElaPk
+    */
+}
 @media screen and (max-width: 1450px){
     #firstimg{
         display: none;
